# document-intelligence-pipeline

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
docs/adr/: ADR-001-page-and-block-processing.md  ADR-002-tables-first-class.md  ADR-003-handwriting-separate-class.md  ADR-004-offline-first.md  ADR-005-audit-based-review.md
src/docint/: cli.py  config.py
src/docint/models/: __init__.py  base.py  block.py  chunk.py  document.py  entity.py  page.py  table.py
src/docint/pipeline/: __init__.py  stage_cont.py  stage_htr.py  stage_layout.py  stage_ocr.py  stage_orient.py  stage_render.py  stage_table.py
src/docint/storage/: __init__.py  database.py  orm_models.py  repositories.py
src/docint/storage/migrations/: env.py  script.py.mako
src/docint/storage/migrations/versions/: 20260107_0001_001_initial_schema.py
tests/: conftest.py  test_layout.py  test_render.py
