[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docint"
version = "0.1.0"
description = "Offline document intelligence pipeline for scanned medical/research PDFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Iyeska LLC", email = "guthdx@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # PDF Processing
    "pymupdf>=1.24.0",

    # Image Processing
    "pillow>=10.0.0",
    "opencv-python>=4.9.0",

    # ML/Deep Learning
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.38.0",
    "sentence-transformers>=2.5.0",

    # Layout Detection
    "ultralytics>=8.1.0",

    # OCR
    "pytesseract>=0.3.10",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "alembic>=1.13.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
docint = "docint.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
